tests/res/visibility/private_field_write.say
type Box {
    value; // private by default
    init(v) { this.value = v; }
}
say b = Box(1);
b.value = 5; // error: Member 'value' is private
